[tool.black]
line-length = 99
target-version = ['py36']
skip-string-normalization = true

# We need to force-exclude the negated include pattern
# so that pre-commit run --all-files does the correct thing
# see https://github.com/psf/black/issues/1778
force-exclude = '^(?!/(telegram|examples|tests)/).*\.py$'
include = '(telegram|examples|tests)/.*\.py$'
exclude = 'telegram/vendor'
[tool.poetry]
name = "python-telegram-bot"
version = "0.1.0"
description = ""
authors = ["John McDonald <john@threatrix.io>"]

[tool.poetry.dependencies]
python = "^3.8"
certifi = "^2021.10.8"
APScheduler = "3.6.3"
pytz = ">=2018.6"
cachetools = "4.2.2"
tornado = ">=6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
